[package]
name = "tiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
keyed_priority_queue = "0.4.1"
nohash-hasher = "0.2.0"
rand = "0.8.5"
custom_error = "1.9.2"
image = "0.24.2"